--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
 		    <artifactId>okio</artifactId>
 		    <version>1.14.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.codeborne/phantomjsdriver -->
+		<dependency>
+		    <groupId>com.codeborne</groupId>
+		    <artifactId>phantomjsdriver</artifactId>
+		    <version>1.4.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
