--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 logging.path=D:\\Projects\\stsworkspace\\prime-art\\logs
+prime-art.drivers.chrome=D:\\Projects\\stsworkspace\\prime-art\\drivers\\chromedriver.exe
+prime-art.alpertron.url=https://www.alpertron.com.ar/ECM.HTM
