added input and output logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 logging.path=D:\\Projects\\stsworkspace\\prime-art\\logs
 prime-art.drivers.chrome=D:\\Projects\\stsworkspace\\prime-art\\drivers\\chromedriver.exe
 prime-art.alpertron.url=https://www.alpertron.com.ar/ECM.HTM
+prime-art.input.image=D:\\Projects\\stsworkspace\\prime-art\\input\\PILLA2.txt
+prime-art.output.folder=D:\\Projects\\stsworkspace\\prime-art\\output
