changes to support specified location for incremental counter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ prime-art.drivers.chrome=D:\\Projects\\stsworkspace\\prime-art\\drivers\\chromed
 prime-art.alpertron.url=https://www.alpertron.com.ar/ECM.HTM
 prime-art.input.image=D:\\Projects\\stsworkspace\\prime-art\\input\\input.txt
 prime-art.output.folder=D:\\Projects\\stsworkspace\\prime-art\\output
+prime-art.incremental.start.location=1435
