both interfaces tested and passed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,2 @@
-logging.path=D:\\Projects\\stsworkspace\\prime-art\\logs
-prime-art.drivers.chrome=D:\\Projects\\stsworkspace\\prime-art\\drivers\\chromedriver.exe
+prime-art.drivers.chrome=V:\\Genie\\STS\\sts-workspace\\prime-art\\drivers\\chromedriver.exe
 prime-art.alpertron.url=https://www.alpertron.com.ar/ECM.HTM
-prime-art.input.image=D:\\Projects\\stsworkspace\\prime-art\\input\\input.txt
-prime-art.output.folder=D:\\Projects\\stsworkspace\\prime-art\\output
-prime-art.incremental.start.location=1425
