--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
+prime-art.random.replacementchancepercentage=20
 prime-art.drivers.chrome=V:\\Genie\\STS\\sts-workspace\\prime-art\\drivers\\chromedriver.exe
 prime-art.alpertron.url=https://www.alpertron.com.ar/ECM.HTM
