file upload feature added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-prime-art.random.replacementchancepercentage=15
+prime-art.random.replacementchancepercentage=10
 prime-art.drivers.chrome=V:\\Genie\\STS\\sts-workspace\\prime-art\\drivers\\chromedriver.exe
 prime-art.alpertron.url=https://www.alpertron.com.ar/ECM.HTM
+prime-art.maxdigits=1024
